app/assets/stylesheets/hotfix.scss
.elm-container { @extend .container; margin: 20px auto; @include clearfix; background: #fff; }
.elm-container-top { @extend .row; background: #7dc6ca; color: #fff; }
.elm-container-bottom { @extend .row; }

.elm-container-content { @extend .col-lg-12; .pagination { padding-left: 15px; } }
.elm-container-top-content { @extend .elm-container-content; padding: 0px 25px; }
.elm-container-bottom-content { @extend .elm-container-content; padding-top: 10px; }

.activities-container, .users-container, .crop_types-container { @extend .elm-container; }

.activities-top, .users-top, .crop_types-top { @extend .elm-container-top; }
.activities-bottom, .users-bottom, .crop_types-bottom { @extend .elm-container-bottom; }

.activities-top-content, .users-top-content, .crop_types-top-content { @extend .elm-container-top-content; }
.activities-bottom-content, .users-bottom-content, .crop_types-bottom-content { @extend .elm-container-bottom-content; }

.marketplace-container {  @extend .elm-container; background: none; }	

.marketplace-filters { padding: 10px; }


.user {  margin-bottom: 15px; h3 { overflow: hidden; height: 1em; } }
.crop_type {  margin-bottom: 15px; h3 { overflow: hidden; height: 1em; } }

.crop {
	height: 250px;
	width: 175px;
	background: white;
	margin: 0px 10px 10px 0px;
	padding: 10px;
}


.flex-container {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-box-align: start;
    -moz-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
    }

.crop {
    -webkit-box-ordinal-group: 1;
    -moz-box-ordinal-group: 1;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}


/*
    Legacy Firefox implementation treats all flex containers
    as inline-block elements.
*/

@-moz-document url-prefix() {
.flex-container {
    width: 100%;
    -moz-box-sizing: border-box;
    }

}

